--- a/style.css
+++ b/style.css
@@ -94,16 +94,22 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
+.dropdown-menu li {
+  list-style: none;
+}
 .dropdown-menu li a {
   display: block;
   padding: 10px 15px;
   color: #222;
+  text-decoration: none;
 }
 .dropdown-menu li a:hover {
   background: #f1f1f1;
 }
 .dropdown:hover .dropdown-menu {
-  display: block;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-rows: 1fr;
 }
 /* Responsive */
 @media (max-width: 992px) {
@@ -1202,6 +1208,7 @@ body {
   margin-right: auto;
   transform: translateY(20px);
   animation: fadeInUp 0.8s forwards 0.2s;
+  /* background: linear-gradient(90deg, #64a9d6, #b1d6e9); */
 }
 
 .contact-hero h1 {
@@ -1221,7 +1228,7 @@ body {
 .contact-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 3rem;
+  gap: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -1334,7 +1341,7 @@ body {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  height: 400px;
+  /* height: 400px; */
 }
 
 .contact-map iframe {
@@ -1953,28 +1960,9 @@ body {
   margin-top: 20px;
 }
 
-.supporter-card {
-  background: white;
-  border-radius: 10px;
-  padding: 10px 5px;
-  width: 180px;
-  height: 140px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-  transition: all 0.3s ease;
-  border: 1px solid #f0f0f0;
-}
-
-.supporter-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
-
 .supporter-logo {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 200px;
+  height: 200px;
 }
 
 .supporter-logo img {
